--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
         html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; }
@@ -42,6 +43,15 @@
         .quiz-options button.correct { background-color: #4CAF50; color: white; border-color: #4CAF50; }
         .quiz-options button.incorrect { background-color: #f44336; color: white; border-color: #f44336; }
         .quiz-result { margin-top: 20px; font-size: 1.3em; font-weight: bold; }
+        #close-quiz {
+            position: absolute; top: 10px; right: 10px; padding: 5px 10px;
+            cursor: pointer; border: none; background: #f44336; color: white;
+            border-radius: 5px; font-size: 1em;
+        }
+        @media (max-width: 400px) {
+            .quiz-question { font-size: 1.2em; }
+            .quiz-options button { font-size: 0.9em; padding: 8px; }
+        }
     </style>
 </head>
 <body>
@@ -51,6 +61,7 @@
     </div>
 
     <div id="quiz-container" class="quiz-container">
+        <button id="close-quiz">✖ Закрити</button>
         <div class="quiz-question" id="quiz-question"></div>
         <div class="quiz-options" id="quiz-options"></div>
         <div class="quiz-result" id="quiz-result"></div>
@@ -64,10 +75,9 @@
         embedded
         renderer="colorManagement: true; physicallyCorrectLights: true;"
     >
-        <a-assets>
+        <a-assets timeout="30000">
             <img id="photo-texture" src="./assets/images/photo.jpg">
             <video id="lesa-video" src="./assets/video/lesa.mp4" preload="auto" loop="false"></video>
-            
             <img id="youtube-icon" src="./assets/icons/youtube.png">
             <img id="telegram-icon" src="./assets/icons/telegram.png">
             <img id="googlesites-icon" src="./assets/icons/googlesites.png">
@@ -80,33 +90,29 @@
 
         <a-entity mindar-image-target="targetIndex: 0">
             <a-image src="#photo-texture" position="0 0 -0.1" height="1.0" width="0.75" rotation="0 0 0"></a-image>
-
             <a-plane id="youtube-btn" class="clickable" width="0.2" height="0.2" position="0.5 -0.5 0.05" rotation="0 0 0" material="src: #youtube-icon; transparent: true; opacity: 1;"></a-plane>
             <a-plane id="telegram-btn" class="clickable" width="0.2" height="0.2" position="0.2 -0.5 0.05" rotation="0 0 0" material="src: #telegram-icon; transparent: true; opacity: 1;"></a-plane>
             <a-plane id="google-btn" class="clickable" width="0.2" height="0.2" position="-0.1 -0.5 0.05" rotation="0 0 0" material="src: #googlesites-icon; transparent: true; opacity: 1;"></a-plane>
             <a-plane id="instagram-btn" class="clickable" width="0.2" height="0.2" position="-0.4 -0.5 0.05" rotation="0 0 0" material="src: #instagram-icon; transparent: true; opacity: 1;"></a-plane>
             <a-plane id="play-video-btn" class="clickable" width="0.2" height="0.2" position="-0.7 -0.5 0.05" rotation="0 0 0" material="src: #play-icon; transparent: true; opacity: 1;"></a-plane>
             <a-plane id="quiz-btn" class="clickable" width="0.2" height="0.2" position="-1.0 -0.5 0.05" rotation="0 0 0" material="src: #goy-icon; transparent: true; opacity: 1;"></a-plane>
-            
-            <a-video id="ar-video" src="#lesa-video" position="0.8 0 0.05" width="1.6" height="0.9" visible="false"></a-video>
+            <a-video id="ar-video" src="#lesa-video" position="0.8 0 0.05" width="1.6" height="0.9" visible=false></a-video>
         </a-entity>
     </a-scene>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const loader = document.getElementById('loader');
+            const sceneEl = document.querySelector('a-scene');
             const targetEntity = document.querySelector('[mindar-image-target]');
-
-            // Посилання на A-Frame елементи
             const arVideoEl = document.getElementById('ar-video');
             const playVideoBtn = document.getElementById('play-video-btn');
             const quizBtn = document.getElementById('quiz-btn');
-
-            // Посилання на HTML-елементи вікторини
             const quizContainer = document.getElementById('quiz-container');
             const quizQuestionEl = document.getElementById('quiz-question');
             const quizOptionsEl = document.getElementById('quiz-options');
             const quizResultEl = document.getElementById('quiz-result');
+            const closeQuizBtn = document.getElementById('close-quiz');
 
             let isQuizActive = false;
             let currentQuestionIndex = 0;
@@ -123,9 +129,24 @@
                 }
             ];
 
+            // Обробка помилок MindAR
+            sceneEl.addEventListener('arError', (err) => {
+                console.error('Помилка MindAR:', err);
+                alert('Не вдалося ініціалізувати AR. Перевірте маркер або підключення.');
+            });
+
+            // Обробка завантаження активів
+            document.querySelector('a-assets').addEventListener('loaded', () => {
+                console.log('Усі активи завантажено успішно');
+            });
+            document.querySelector('a-assets').addEventListener('error', (err) => {
+                console.error('Помилка завантаження активів:', err);
+                alert('Не вдалося завантажити деякі ресурси. Перевірте підключення або файли.');
+            });
+
+            // Логіка вікторини
             function startQuiz() {
                 isQuizActive = true;
-                currentQuestionIndex = 0;
                 quizContainer.style.display = 'block';
                 showQuestion();
             }
@@ -138,6 +159,7 @@
                 currentQuestion.options.forEach(option => {
                     const button = document.createElement('button');
                     button.textContent = option;
+                    button.setAttribute('aria-label', `Варіант відповіді: ${option}`);
                     button.addEventListener('click', () => checkAnswer(option));
                     quizOptionsEl.appendChild(button);
                 });
@@ -182,7 +204,13 @@
                 }
             }
 
-            // Обробники кліків для A-Frame кнопок
+            // Закриття вікторини
+            closeQuizBtn.addEventListener('click', () => {
+                quizContainer.style.display = 'none';
+                isQuizActive = false;
+            });
+
+            // Обробники для посилань
             const links = {
                 'youtube-btn': 'https://www.youtube.com/@23SmartLessa32',
                 'telegram-btn': 'https://t.me/+Ck0ua_cmlI84Yjcy',
@@ -190,7 +218,6 @@
                 'instagram-btn': 'https://www.instagram.com/smart23lessa?igsh=aHN5dzZudnJneW85'
             };
 
-            // Додаємо обробники для посилань
             Object.keys(links).forEach(id => {
                 const el = document.getElementById(id);
                 el.addEventListener('click', () => {
@@ -201,16 +228,15 @@
             // Обробник для відео
             playVideoBtn.addEventListener('click', () => {
                 if (arVideoEl) {
-                    arVideoEl.setAttribute('visible', 'true');
-                    arVideoEl.play();
+                    arVideoEl.setAttribute('visible', true);
+                    arVideoEl.play().catch(err => {
+                        console.error('Помилка відтворення відео:', err);
+                        alert('Не вдалося відтворити відео. Перевірте формат або підключення.');
+                    });
                 } else {
                     console.error('Відеоелемент не знайдено!');
+                    alert('Відео недоступне. Перевірте ресурси.');
                 }
-            });
-
-            // Обробник для вікторини
-            quizBtn.addEventListener('click', () => {
-                startQuiz();
             });
 
             // Логіка відстеження маркера
@@ -223,15 +249,15 @@
                 targetEntity.addEventListener('targetLost', () => {
                     console.log("ℹ️ Маркер втрачено.");
                     loader.style.display = 'flex';
-                    // Зупиняємо відео, якщо маркер втрачено
                     if (arVideoEl) {
                         arVideoEl.pause();
                         arVideoEl.currentTime = 0;
-                        arVideoEl.setAttribute('visible', 'false');
+                        arVideoEl.setAttribute('visible', false);
                     }
                 });
             } else {
                 console.error('Елемент mindar-image-target не знайдено!');
+                alert('Помилка ініціалізації AR. Елемент mindar-image-target відсутній.');
             }
         });
     </script>
